
- physics mostly redone (also previously known as 'physmod(5)')
  due to this it is now also possible to enable vsync without physics sideeffects like stutter or bad aiming (set FPS limiter to 1)

  -> additional changes since physmod5:
     - friction is no longer ignored (e.g. it was always 0.3) on the playfield, walls, slingshots, primitives, ramps, gates (and more?!)
     - collision heuristics are adapted for ball sizes different from the default 25
     - (hopefully) no more ball-falling-through-playfield problem

- add material editor

- assign sound-,image-,material- and collection-manager to hot keys (F2,F3,F4 and F8)

- add rubber element

- shader based inserts/lights/bulbs
- shader based mesh ball
- shader based materials/lighting (mostly redone from scratch)

- internal DMD (access via script, input levels are 0..100)
- DMDWidth, DMDHeight, DMDPixels added to Table Script methods

- improved smoothness for ramps (centripetal Catmull-Rom splines)
- changed opacity/transparency handling for ramps (Alpha/Acrylic have been replaced by new props Transparent/Opacity)

- GetElement, GetElementByName, GetBalls added to Table Script methods
- renaming of IsVisible properties (flasher, ramp) to Visible

- include optional nudge filtering (selectable in the keys dialog)
  and remove implicit dead zone handling (if you have the dead zone setting at 0% and now experience problems, set it to at least 1%)

- new external audio library for music playback (BASS)

- 64bit port (handle with care, might still cause issues)

- native support for the Pinscape Controller

- DirectX 8 port for input handling (currently disabled)

- texture size limit/downscale now respects aspect ratio (currently disabled)

- script editor updated to use latest scintilla (3.5.1)

- technical note: make sure to install Microsoft SDK 5.0,7.0A,7.1 or 7.1A, if you compile VP and get missing header errors (optionally set the include path inc\winsdk)

VP 9.9.0 Changelog
------------------------