@@ -584,16 +584,15 @@ STDMETHODIMP Kicker::KickXYZ(float angle, float speed, float inclination, float 
 		if (fabsf(inclination) > (float)(M_PI/2.0))		// radians or degrees?  if greater PI/2 assume degrees
 			inclination *= (float)(M_PI/180.0);			// convert to radians
 		
-        //!! TODO: reenable scatter if desired
-		//float scatterAngle = (m_d.m_scatter <= 0.0f) ? c_hardScatter : ANGTORAD(m_d.m_scatter); // if <= 0 use global value
-		//scatterAngle *= g_pplayer->m_ptable->m_globalDifficulty;		// apply dificulty weighting
+		float scatterAngle = (m_d.m_scatter < 0.0f) ? c_hardScatter : ANGTORAD(m_d.m_scatter); // if < 0 use global value
+		scatterAngle *= g_pplayer->m_ptable->m_globalDifficulty;		// apply dificulty weighting
 
-		//if (scatterAngle > 1.0e-5f)										// ignore near zero angles
-		//	{
-		//	float scatter = rand_mt_m11();								// -1.0f..1.0f
-		//	scatter *= (1.0f - scatter*scatter)*2.59808f * scatterAngle;// shape quadratic distribution and scale
-		//	anglerad += scatter;
-		//	}
+		if (scatterAngle > 1.0e-5f)										// ignore near zero angles
+		{
+			float scatter = rand_mt_m11();								// -1.0f..1.0f
+			scatter *= (1.0f - scatter*scatter)*2.59808f * scatterAngle;// shape quadratic distribution and scale
+			anglerad += scatter;
+		}
 		
 		const float speedz = sinf(inclination) * speed;
 
